# zed

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/skills/zed-i18n/: SKILL.md
.github/: release.yml
.github/workflows/: release.yml  run_tests.yml
assets/settings/: default.json
crates/activity_indicator/: Cargo.toml
crates/activity_indicator/src/: activity_indicator.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_diff.rs  agent_model_selector.rs  agent_panel.rs  agent_registry_ui.rs  agent_ui.rs  config_options.rs  (+10 more)
crates/ai_onboarding/: Cargo.toml
crates/auto_update_ui/: Cargo.toml
crates/call/: Cargo.toml
crates/channel/: Cargo.toml
crates/collab_ui/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/csv_preview/: Cargo.toml
crates/debugger_tools/: Cargo.toml
crates/debugger_ui/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/encoding_selector/: Cargo.toml
crates/extensions_ui/: Cargo.toml
crates/feedback/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/go_to_line/: Cargo.toml
crates/image_viewer/: Cargo.toml
crates/inspector_ui/: Cargo.toml
crates/keymap_editor/: Cargo.toml
crates/language_onboarding/: Cargo.toml
crates/language_selector/: Cargo.toml
crates/line_ending_selector/: Cargo.toml
crates/markdown_preview/: Cargo.toml
crates/notifications/: Cargo.toml
crates/office_preview/: Cargo.toml
crates/office_preview/fixtures/: test.xlsx
crates/office_preview/src/: document.rs  docx.rs  markup.rs  office_preview.rs  pdf.rs  persistence.rs  pptx.rs  spreadsheet.rs  view.rs
crates/onboarding/: Cargo.toml
crates/open_path_prompt/: Cargo.toml
crates/outline/: Cargo.toml
crates/outline_panel/: Cargo.toml
crates/platform_title_bar/: Cargo.toml
crates/project_panel/: Cargo.toml
crates/project_symbols/: Cargo.toml
crates/recent_projects/: Cargo.toml
crates/repl/: Cargo.toml
crates/search/: Cargo.toml
crates/settings_profile_selector/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/sidebar/: Cargo.toml
crates/snippets_ui/: Cargo.toml
crates/svg_preview/: Cargo.toml
crates/tab_switcher/: Cargo.toml
crates/tasks_ui/: Cargo.toml
crates/terminal_view/: Cargo.toml
crates/theme_selector/: Cargo.toml
crates/title_bar/: Cargo.toml
crates/toolchain_selector/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui_input/: Cargo.toml
crates/ui_input/src/: input_field.rs
crates/which_key/: Cargo.toml
crates/workspace/: Cargo.toml
crates/zed/: Cargo.toml
crates/zed_i18n/: Cargo.toml
script/: bundle-windows.ps1
tmp/zed-i18n-trigger-eval/: eval_set.json
(+303 files in other folders)
