[package]
name = "office_preview"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/office_preview.rs"

[dependencies]
anyhow.workspace = true
calamine.workspace = true
feature_flags.workspace = true
file_icons.workspace = true
gpui.workspace = true
image.workspace = true
language.workspace = true
log.workspace = true
markdown.workspace = true
pdf-render.workspace = true
project.workspace = true
quick-xml.workspace = true
settings.workspace = true
smallvec.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
worktree.workspace = true
zed_i18n.workspace = true
zip.workspace = true
